force-app/main/default/objects/Lead_Attached_Image__c/Lead_Attached_Image__c.object-meta.xml
<CustomObject>
    <label>Lead Attached Image</label>
    <nameField>
        <label>Lead Attached Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Attached Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>