force-app/main/default/objects/Lead_Attached_Image__c/fields/Image_RTF__c.field-meta.xml
<CustomField>
    <fullName>Image_RTF__c</fullName>
    <label>Image_RTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>