force-app/main/default/objects/Lead_Attached_Image__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Attached Images</relationshipLabel>
    <relationshipName>Lead_Attached_Images</relationshipName>
    <type>Lookup</type>
</CustomField>