force-app/main/default/objects/Lead_Attached_Image__c/fields/Original_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Original_Image_URL__c</fullName>
    <label>Original Image URL</label>
    <type>Url</type>
</CustomField>