force-app/main/default/objects/Lead_Attached_Image__c/fields/Resized_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Resized_Image_URL__c</fullName>
    <label>Resized Image URL</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>