force-app/main/default/objects/Lead_Attached_Image__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Original_Image_URL__c</columns>
    <columns>Resized_Image_URL__c</columns>
    <columns>Image_RTF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>